// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mount app 1`] = `
"<div class=\\"comment-viewer\\" data-url=\\"/api\\" data-v-app=\\"\\"><div class=\\"comment-thread panel panel-default\\"><div class=\\"panel-heading clearfix\\">Comments  (0) <button class=\\"btn btn-default btn-sm pull-right\\">sort <i class=\\"fas fa-sort-down\\"></i></button></div><!--v-if--></div></div>
    <div class=\\"comment-count\\" data-url=\\"/api\\" data-v-app=\\"\\"><div class=\\"badge badge-compteur\\">0</div></div>
    <input name=\\"csrfmiddlewaretoken\\">"
`;

exports[`mount app on invalid element 1`] = `
"<div class=\\"comment-viewer\\" data-url=\\"/api\\" data-v-app=\\"\\"><div class=\\"comment-thread panel panel-default\\"><div class=\\"panel-heading clearfix\\">Comments  (0) <button class=\\"btn btn-default btn-sm pull-right\\">sort <i class=\\"fas fa-sort-down\\"></i></button></div><!--v-if--></div></div>
    <input name=\\"csrfmiddlewaretoken\\">"
`;
